src/styles/drivergrid.scss
@import "variables";
@import "mq";

.driver-grid {
    display: grid;
    grid-template-columns: repeat(4, auto);
    @include respond(phone-1) {
        grid-template-columns: repeat(3, auto);
    }
    @include respond(phone-3) {
        grid-template-columns: repeat(2, auto);
    }
    grid-gap: 2rem;

    width: 90%;
    margin: 0 auto;
    margin-top: 5rem;
}

.card-mini {
    position: relative;
    height: 10rem;
    border-radius: 8px;
    cursor: pointer;

    color: $color-black;
    background: rgba($color-black, 0.05);
    border: 2px solid rgba($color-black, 0.8);

    transition: all 200ms;

    &.dark {
        color: $color-white;
        background: rgba($color-white, 0.05);
        border: 2px solid rgba($color-white, 0.8); 
    }

    &--plate {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        letter-spacing: 0.16rem;
        font-size: 2.5rem;
        @include respond(phone-2) {
            letter-spacing: 0.075rem;
            font-size: 2.25rem;
        }
        @include respond(phone-3) {
            font-size: 2.5rem;
        }
        white-space: nowrap;
    }

    &--location {
        width: 100%;
        display: block;
        text-align: center;
        margin-top: 0.5rem;

        color: rgba($color-black, 0.8);

        transition: all 200ms;

        &.dark {
            color: rgba($color-white, 0.8);
        }
    }
}

.card-full {
    position: fixed;
    top: 0;
    left: 0;
    margin-top: 7.5rem;
    width: 100%;
    height: 100%;
    background: $color-primary-light;

    z-index: 1000;

    transition: all 200ms;

    animation: pullUp 400ms ease-out;

    &.dark {
        background: $color-black;
    }

    &__plate {
        width: 60%;
        height: 17rem;
        margin: 0 auto;
        margin-top: 5rem;
        border-radius: 10px;
        border: 2px solid $color-white;
        color: $color-white;

        @include respond(phone-2) {
            width: 75%;
        }

        &--country {
            display: block;
            width: 12rem;
            text-align: center;
            margin: 0 auto;
            font-size: 4rem;
            background: $color-primary-light;

            transform: translateY(-2rem);

            transition: all 200ms;

            z-index: 500;

            &.dark {
                background: $color-black;
            }
        }

        &--state {
            display: block;
            width: 8rem;
            text-align: center;
            margin: 0 auto;
            font-size: 4rem;
            background: $color-primary-light;

            transform: translateY(2.75rem);

            transition: all 200ms;

            z-index: 500;

            &.dark {
                background: $color-black;
            }
        }

        &--license {
            text-align: center;
            font-family: $font-2;
            font-size: 6rem;
            line-height: 7rem;
            letter-spacing: 0.4rem;
        }
    }

    &--comments {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 80%;
        @include respond(phone-2) {
            width: 85%;
        }
        height: 50%;
        margin: 0 auto;
        margin-top: 5rem;
        padding: 1.5rem;

        border: 2px solid $color-white;
        border-radius: 8px;

        overflow-y: scroll;
    }
}

.no-comment {
    position: relative;
    width: 100%;
    color: rgba($color-white, 0.8);

    font-size: 3rem;
}

.comment {
    position: relative;
    width: 100%;
    border-radius: 4px;
    background: rgba($color-black, 0.15);
    color: $color-white;

    transition: all 200ms;

    &:not(:last-child) {
        margin-bottom: 1.5rem;
    }

    &.dark {
        background: rgba($color-white, 0.05);
    }

    &--type {
        position: absolute;
        top: 0;
        right: 0;
        padding: 0.75rem;
        color: rgba($color-white, 0.8);
        text-transform: capitalize;
        border-radius: 0px 0px 0px 8px;
        box-shadow: -1.75px 1.75px 12px $color-primary-light;

        &.dark {
            box-shadow: -1.5px 1.5px 12px $color-black;
        }
    }

    &--text {
        padding-top: 3.85rem;
        padding-left: 1rem;
        padding-right: 4.5rem;
        padding-bottom: 1.3rem;
        font-family: $font-1;
        font-weight: 300;
        font-size: 3rem;
        text-transform: lowercase;
    }

    &--date {
        padding-left: 1rem;
        padding-top: 0.75rem;
        padding-bottom: 0.75rem;
        color: rgba($color-white, 0.8);
        box-shadow: 0px -2px 12px $color-primary-light;

        &.dark {
            box-shadow: 0px -1.5px 12px $color-black;
        }
    }
}

.close-card {
    position: absolute;
    top: 0;
    right: 0;
    padding: 1.5rem;
    border: none;
    background: none;
    color: $color-white;
    font-size: 3.5rem;

    cursor: pointer;
}

@keyframes pullUp {
    0% {
        transform: translateY(50rem);
    }
    100% {
        transform: translate(0);
    }
}

